--- a/novidades.html
+++ b/novidades.html
@@ -47,7 +47,7 @@
                     <span class="produto__tag">NOVO</span>
                     <img src="https://i.pinimg.com/736x/ab/e7/3b/abe73b40fdd7590f6e8343911f5777a3.jpg" alt="Camisa Coleção Limitada SELF">
                     <h3>Camisa Edição Limitada SELF</h3>
-                    <p class="produto__preco">A partir de R$ 149,90</p>
+                    <p class="produto__preco">R$ 149,90</p>
                     <a href="#" class="botao botao--pequeno">VER DETALHES</a>
                 </article>
                 
